--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </div>
                 <div class="pet">
                     <h3>Baby Blinky</h3>
-                    <img src="images/rabbit pet.jpg" width="200" alt=" cute rabbit with it's mouth open">
+                    <img src="images/rabbit_pet.jpg" width="200" alt=" cute rabbit with it's mouth open">
                     <p>In a little corner of the world where laughter blooms like wildflowers and joy dances on the
                         morning
                         breeze, lives a petite, vibrant spirit named Baby Blink. A rabbit with the zest for life evident
