--- a/travel.html
+++ b/travel.html
@@ -157,7 +157,7 @@
             <div class="travel-item">
                 <h3> Vancouver, British Colombia : The Haven of Natural Beauty and Sophistation </h3>
                 <div class="travel-images">
-                    <img src="images/Vancouve_British _Colombia_part2.jpg" width="400"
+                    <img src="images/Vancouve_British_Colombia_part2.jpg" width="400"
                         alt="beach scene with clear water">
                     <img src="images/Vancouver_British_Colombia.jpg" width="400" alt="Ancient Side View ">
                 </div>
